--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -1,4 +1,5 @@
 <table class="table">
+
 	<tr><%= attachment_image_tag(user, :profile_image, :fill, 100, 100, fallback: "no_image.jpg") %></tr>
 	<tr>
 		<th>name</th>
@@ -12,5 +13,9 @@
 </table>
 
 <div class="row">
-	<%= link_to '', edit_user_path(user), class: "col-xs-12 btn btn-default glyphicon glyphicon-wrench edit_user_#{user.id}" %>
+	<% if @user == current_user %>
+	  <%= link_to '', edit_user_path(@user), class: "col-xs-12 btn btn-default glyphicon glyphicon-wrench edit_user_#{user.id}" %>
+	<% else %>
+	  <%= link_to '', user_path(@user), class: "col-xs-12 btn btn-default glyphicon glyphicon-wrench" %>
+	<% end %>
 </div>
