--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -3,10 +3,10 @@
      	<div class="col-xs-3">
 
     		<h2>User info</h2>
-    		<%= render 'users/profile', user: @user %>
+    		<%= render 'users/profile', user: @book.user %>
 
     		<h2>New book</h2>
-    		<%= render 'books/form', book: @book %>
+    		<%= render 'books/form', book: @book_new %>
 
     	</div>
 
@@ -23,12 +23,12 @@
 					<td><%= link_to @book.title, book_path(@book) %></td>
 					<td><%= @book.body %></td>
 					<td>
-						<% if @user == current_user %>
+						<% if @book.user == current_user %>
 						  <%= link_to "Edit", edit_book_path(@book), class: "btn-sm btn-success edit_book_#{@book.id}" %>
 						<% end %>
 					</td>
 					<td>
-						<% if @user == current_user %>
+						<% if @book.user == current_user %>
 						  <%= link_to "Destroy", book_path(@book), method: :delete, data: {confirm: "本当に削除してもよろしいですか？"}, class: "btn-sm btn-danger destroy_book_#{@book.id}" %>
 						<% end %>
 				    </td>
